--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 VUE_APP_SC_API_URL=xx
 VUE_APP_CMN_NODE_API_URL=xx
 # VUE_APP_CMN_NODE_API_URL=xx
-VUE_APP_API_URL=http://localhost:3000
+VUE_APP_API_URL=https://pm-module-api.smartsystem.id/
 VUE_APP_API_URL_PF=http://localhost:3300/api/tpm
 VUE_APP_CONTAINER_URL=xx
 VUE_APP_APP_ID=APP-NAME
